--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <title>Corso Web Developer - Epicode school</title>
     <link rel="stylesheet" href="Esercizio/assets/css/style.css" />
   </head>
@@ -32,7 +33,9 @@
             Smetti di inseguire i titoli, inizia a lavorare. Mentre tutti
             vogliono arricchire il CV, tu pensa ad arricchire le tue competenze.
           </p>
-          <button type="button">PARTIAMO!</button>
+          <a href="#ancora">
+            <button type="button">PARTIAMO!</button>
+          </a>
         </article>
       </section>
       <section id="secondaSezione">
@@ -67,11 +70,12 @@
       <section id="recensioni">
         <article>
           <h2>Epicode garantisce</h2>
+          <blockquote>
+           <i>"3 mesi intensivi di corso che cambieranno radicalmente la tua vita"</i>
+          </blockquote>
           <blockquote
-            cite="Mario Rossi
-                CEO, Epicode "
-          >
-            3 mesi intensivi di corso che cambieranno radicalmente la tua vita
+            cite="Mario Rossi">
+            Mario Rossi, <br/> CEO, Epicode
           </blockquote>
         </article>
       </section>
@@ -99,17 +103,28 @@
       </section>
     </main>
 
-    <footer>
-        <section>
-            <h2>Contattaci</h2>
-           <p><i class="fa-solid fa-square-phone-flip"></i><address>(+39)11223456</address></p>
-           <p><i class="fa-solid fa-square-envelope"></i><address>info@epicode.school</address></p>
-           <p><i class="fa-solid fa-up-right-from-square"></i><address>Via Appia 1 - 00100 Roma (RM)</address></p>
-        </section>
-        <hr/>
-        <div>
-            <p>&copy 2021. Immagini di <u>Pixabay</u></p>
-        </div>
+    <footer id="ancora">
+      <section>
+        <h2>Contattaci</h2>
+        <address>
+          <p>
+            <i class="fa-solid fa-square-phone-flip"></i
+            ><a href="tel:+3911223456">(+39)11223456</a>
+          </p>
+          <p>
+            <i class="fa-solid fa-square-envelope"></i
+            ><a href="mailto:info@epicode.school">info@epicode.school</a>
+          </p>
+          <p>
+            <i class="fa-solid fa-up-right-from-square"></i>Via Appia 1 - 00100
+            Roma (RM)
+          </p>
+        </address>
+      </section>
+      <hr />
+      <div>
+        <p>&copy 2021. Immagini di <u>Pixabay</u></p>
+      </div>
     </footer>
   </body>
 </html>
